# TCP-Networking

./: .gitmodules  CMakeLists.txt
src/Client/: SHA256.hpp  TcpClient.hpp  main.cpp
src/Server/: TcpConnection.hpp  TcpServer.hpp  main.cpp
